Extract basic project information from maven.